assets/header_lower//tile: add spacing for med screen fixes #1627

--- a/adhocracy-plus/assets/scss/components/_header_lower.scss
+++ b/adhocracy-plus/assets/scss/components/_header_lower.scss
@@ -53,6 +53,10 @@
 .header-lower__nav-list--md {
     position: relative;
     bottom: -6 * $spacer;
+
+    &:last-child {
+        padding-right: $spacer;
+    }
 }
 
 .header-lower__nav-list--sm {
